<resources>
    <string name="app_name" translatable="false">Shoppe</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="switch_to_register">Create an account</string>
    <string name="switch_to_login">Already a member? Log in</string>
    <string name="google_sign_in_button">Sign In with Google</string>

    <string name="login_error_empty_fields">Please enter email, password, and username</string>
    <string name="login_error_invalid_credentials">Incorrect password or email</string>
    <string name="login_error_no_user">No user found with this email</string>
    <string name="login_error_general">Login error</string>

    <string name="register_error_general">Registration failed</string>
    <string name="verification_email_sent">Verification email has sent. Please verify your email.</string>

    <string name="google_sign_in_error">Google Sign-In Failed: %1$s</string>
    <string name="google_sign_in_success">Google Sign-in was successful!</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="email_verification_reminder">Please verify your email address!</string>

    <string name="create_user_error">An creation failed. Please retry</string>
    <string name="verify_email_error">Email verifying failed. Please retry</string>

    <string name="profile">Profile</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="buy">Buy</string>
    <string name="total">Total:</string>
    <string name="username">Username</string>
    <string name="orders">Orders</string>

    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="oops">oops!</string>

    <string name="reset_all_filters">Reset all filters</string>
    <string name="nothing_found">Nothing found</string>
    <string name="bag">Bag</string>
    <string name="my_account">My account</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="remove_from_bag">Remove from bag</string>

    <string name="to_leave_a_comment_you_must_purchase_this_product">To leave a comment you must purchase this product</string>
    <string name="opinions">Opinions</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Subcategories</string>

    <string name="transaction_success">Transaction successful!\nThank you for your purchase.</string>
    <string name="transaction_failure">Transaction failed.\nPlease try again later.</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>

    <string name="button_continue">Continue</string>
    <string name="pay">Pay</string>
    <string name="order_summary">Order Summary</string>
    <string name="out_of_stock">Out of stock</string>

    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="payment_method_label">Payment Method:</string>
    <string name="welcome">Welcome</string>

    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="only_discounts">Only discounts</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="minimum_rating">Minimum Rating</string>
    <string name="register_with_google">Sign up with Google</string>
    <string name="your_favorite_list_is_empty_go_shop_for_something_you_love">Your favorite list is empty. Go shop for something you love!</string>
    <string name="go_to_shop">Go to Shop</string>
    <string name="your_bag_is_empty_go_shop_for_something_you_love">Your bag is empty. Go shop for something you love!</string>

</resources>
